<resources>
    <string name="app_name">WalmartTest</string>
    <string name="txt_producto">Producto:</string>
    <string name="txt_department">Departamento:</string>
    <string name="txt_sku">SKU:</string>
    <string name="txt_price">Precio:</string>
    <string name="txt_btn_add">Agregar al carrito</string>
    <string name="txt_walmartest">Walmart Test</string>
    <string name="txt_url">https://www.walmart.com.mx/api/rest/model/atg/commerce/catalog/ProductCatalogActor/getProduct?id=00750940180662</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="txt_title_dialog">Walmart</string>
    <string name="txt_problema_internet">Ocurrió un problema, revise su conexión a internet.</string>
    <string name="txt_btn_entendido">Entendido</string>
    <string name="txt_enviando_espera">Recibiendo datos, por favor espere.</string>

</resources>
